# Solana_Raffle

./: Anchor.toml  package.json
app/: package-lock.json  package.json  remix.config.js  tailwind.config.ts  tsconfig.json
app/app/: constants.ts  entry.client.tsx  root.tsx
app/app/components/: BackArrow.tsx  CopyAddress.tsx  Countdown.tsx  CreateRaffle.tsx  ErrorMessage.tsx  ImageUpload.tsx  NftSelector.tsx  Page.tsx  PanelCard.tsx  PoweredBy.tsx  PriorityFeesSelector.tsx  Prize.tsx  Providers.tsx  RaffleStateChip.tsx  Title.tsx  TokenSelector.tsx  WalletButton.tsx
app/app/context/: digital-assets.tsx  stake.tsx  (+1 more)
app/patches/: @irys+sdk+0.0.2.patch
app/public/: fetch-assets.worker.js
programs/raffle/: Cargo.toml
programs/raffle/src/: lib.rs
programs/raffle/src/instructions/: buy_ticket_burn_nft.rs  buy_ticket_send_nft.rs  buy_tickets_token.rs  claim_prize.rs  collect_nft.rs  consume_randomness.rs  delete_raffle.rs  delete_raffler.rs  draw_winner.rs  init.rs  init_program_config.rs  init_raffle.rs  mod.rs  recover_nft.rs  set_entrants_uri.rs  set_slugs.rs  toggle_active.rs  update_program_config.rs  update_raffler.rs
programs/raffle/src/state/: entrants.rs  mod.rs  program_config.rs  raffle.rs  raffler.rs
programs/raffle/src/utils/: entrants.rs  mod.rs  randomness_tools.rs
tests/: helper.ts
tests/helpers/: instructions.ts  pdas.ts  utils.ts
tests/specs/: admin.ts  nft-gated.ts  pnft-burn.ts  pnft-transfer.ts  sol-raffle-for-token.ts  sol-raffle.ts  token-burn.ts
vite-test/: package-lock.json  package.json  vite.config.ts
vite-test/app/: root.tsx
(+52 files in other folders)
